[26] Create Java 26 test framework changes (#4488)